--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "apollo-server-express": "^2.23.0",
     "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
+    "graphql-relay": "^0.6.0",
     "graphql-scalars": "^1.9.0",
     "neo4j-driver": "^4.2.3",
     "reflect-metadata": "^0.1.13"
@@ -47,6 +48,7 @@
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
     "@types/faker": "^5.5.3",
+    "@types/graphql-relay": "^0.6.0",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
     "@types/supertest": "^2.0.11",
